Cannot delete data from file in outliner #66955

Closed
opened 2019-07-15 05:59:12 +02:00 by Christopher Hosken · 10 comments

System Information
Operating system: Linux-4.15.0-54-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error
There is no way to delete data from the Blender file in the outliner

Exact steps for others to reproduce the error
Go to Outliner,
select 'Blender file',
right click on any piece of data
There is no delete option (there was in 2.79)

**System Information** Operating system: Linux-4.15.0-54-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** There is no way to delete data from the Blender file in the outliner **Exact steps for others to reproduce the error** Go to Outliner, select 'Blender file', right click on any piece of data There is no delete option (there was in 2.79)

Added subscriber: @Vis

Added subscriber: @Vis

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2019-07-15 10:29:22 +02:00

Yes there is thye Delete option, with a little 'X' in front of it even…

Yes there is thye Delete option, with a little 'X' in front of it even…

Ah, sorry. I wasn't specific enough in my steps. It seems to work with physical objects and textures. but Masks, Movie Clips, Node Groups, Screens, Window Managers, and Workspaces don't have the 'Delete' option.

Ah, sorry. I wasn't specific enough in my steps. It seems to work with physical objects and textures. but Masks, Movie Clips, Node Groups, Screens, Window Managers, and Workspaces don't have the 'Delete' option.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Meeeh… indeed… damnit… :/

Meeeh… indeed… damnit… :/

Sorry,

Also, when you have the time. Could you try and get the Spring team to upload the soundtrack for 'Spring'?
It was really good and I would enjoy hearing it without the other noises from the film.
Thanks ?

Sorry, Also, when you have the time. Could you try and get the Spring team to upload the soundtrack for 'Spring'? It was really good and I would enjoy hearing it without the other noises from the film. Thanks ?
Jacques Lucke changed title from Delete to Cannot delete data from file in outliner 2019-07-15 11:28:29 +02:00

This issue was referenced by 0b25566143

This issue was referenced by 0b255661435ab7021db3acafe15abe6ea0b946b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66955
No description provided.